# openMVG

./: .gitignore
src/software/Geodesy/: CMakeLists.txt
src/software/Geodesy/custom_gcp_registration/: CMakeLists.txt  GCP.cpp  GCP.hpp  GCPList.cpp  GCPList.hpp  GCPRegister.cpp  GCPRegister.hpp  document.hpp  main.cpp
src/software/SfM/export/: main_openMVG2Colmap.cpp
src/software/ui/SfM/custom_gcp_registration/: CMakeLists.txt
